# biere-n-collect

./: .devcontainer.json  .env.template  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.test  README-en.md  README.md  compose.override.yml.template  compose.test.yml  compose.yml  flake.nix  nginx.conf  stripe-cli.sh  stripe-cli.yml  test-local.sh  test.sh
back/: Cargo.toml  Dockerfile  biere-n-collect.db  bnc-dev.db  populate.sql
back/.sqlx/: query-071d1a6a2da930167a160f4b0b8af9042eb319a6cbaf02746375cf4858448c09.json  query-08dfb58ddbeb9959f40b24f9a7a5901a2ed5a5cdc87d7dcc21fc1ee969a96aa1.json  query-09c6dd3425f3774c7242524ca9ea49bc926c79c6ca867570877e4c5197c5c287.json  query-0adfdd3e70e95a3a092e38e5e7dd9b1b25e3b5a1900c5e50fab87afefb7b5f53.json  query-0b273a81ee9451b43dfe749a83d152a661f57fe8106ac7d4bde963fdcd2bf3e5.json  query-0f14678ae7a2e662c87a24be433b03ef0e34638bbb4babe1cc0e1e274e56574a.json  query-129f71a10b183d57f48b181cf32b515b3b70ed5c713c1a7e9ca010d1075de579.json  query-178c5a90fe143976d4ecf4b63a36ca2159cb42bbd8a0d015eecafd74c84929ec.json  query-1db15588137c2d958be8e5ea30174f116bd2284771d010d63d5b673fbc98f007.json  query-1ed64c7a6b7a89a33b526fed97095ae7a4d6901bfc4761bc0e8b67dbe609c035.json  query-1fc52679704e4f449141a2bcfd3522470b1faefd3cde001af0170ac3987be00c.json  query-2042917dfaf7bb2f9f4693a1f2b0ee20d51f71951fabb8d8c1e25c1c27e126c7.json  query-21820c12f4b22e0cd0e5fddcf5542b0da8deeb73f415a26104e1ccef3d561445.json  query-21a98d80b49001c8fa35607eeda4d4d39419848bbf32cc527491e73e80a24e15.json  query-228f2ce2f620897c3204a1ca1e570fbde4ede40b8e86708874cf1379e11cae7e.json  query-26b500d1b65380eb602286ad7048175343bd22dce3ba8aed53be5c74d4ba3376.json  query-292f085d087e70b5f13df297fad38776a6d7d37ff1cae4ca1f426896cfa8b786.json  query-29379bd46c75831ef0ec8dcbd1dffbdc282139feae94a360b2a8b7e05300e487.json  query-2a51aea6a249fe37354d72d886aadbcd83abb7f5e47583ab33b0588649e4b0e6.json  query-2e7df6244cced531769093385fa7f10568287fbc92e1c481498c7e038e7b7aff.json  query-31ccb4fdc90353eb885ee2e6fe86b5f1503f3db5b4be5000cfe415f0a04c5495.json  query-38505c94089ca536bdafaa6010dc514467bc5aaf49a3a3184ba3ca20e378a106.json  query-3a4ab3a7985fe3631ade2b0098fcd90efacb188f92444d89cf9b221b30ffe125.json  query-3be70bf8fb600f9ec1c4b64f6174b710add57a4ed71dc2315eaf1222f7b9eda2.json  query-3c637c98986a29e4ac6cdbbc08b0cd203aab81a26703e22dfa7e94f1972906bd.json  query-3de6835ccb43fe87ed5da4a70e8143c8b783a3fea4e3141ad1930d552427fe15.json  query-40f82708c06a65960063dbe9e69659f09a054f5c136d89855b4116c6416d42fd.json  query-4252a4f147dae7d07bfe3268e5a607a53deaab4c54de27909e91a3c6fee18406.json  query-43599573c3ff166d6439fe72aeb23b02e6fd77eea0b071c61a62c33a2bd111a8.json  query-43f7af4d4a90c805737fd67271255b077eb876303b86acf7e936e4553cfba171.json  query-451c5db538377f3fbdf457e07c4a4b8bb9352eb4dbfbf82c4660cb3107aa30b7.json  query-4814abb4e1945171e9889c57623ecef745fb34ad1f8deb92c3d7f44639aa2719.json  query-4a6744ec5f636fdefed35d7a15f402077427a71eec20614b6d024c855794f57f.json  query-4b9873c0c8c3635474f5d0028ceb060e3b53b4f9e66db4abf48ff242a038c29a.json  query-4e269c866172c276b625a9f1eaf386bae791831191926d6514918ab2d590c04b.json  query-504fc8735fba330f9b3ad566f6a57bb76e6254c7367283191a2182969e33ff29.json  query-50b3935ebe738cc076a24002978e84ac5fc5f0da84ab4b372522ff953ce9e49c.json  query-5231a62f4053d02bba2ecc9fb35584d6704a61de4c3b2b88c91631b321d189c8.json  (+88 more)
back/migrations/: 20240812210611_init.sql  (+2 more)
back/src/: db.rs  (+4 more)
(+134 files in other folders)
